Fixed a bug with shifting content

--- a/src/styles/style.module.scss
+++ b/src/styles/style.module.scss
@@ -6,13 +6,6 @@
 $maxWidthContainer: 1080;
 $maxWidth: 1920;
 
-html {
-  &._pc {
-    margin: 0px calc(-1 * (100vw - 100%)) 0px 0px;
-    overflow-x: hidden;
-  }
-}
-
 body {
   font-family: sans-serif;
   font-size: 14px;
